; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/gspca/extr_topro.c_setbgain.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/gspca/extr_topro.c_setbgain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gspca_dev = type { i32 }

@CX0342_RAW_BGAIN_H = common dso_local global i32 0, align 4
@CX0342_RAW_BGAIN_L = common dso_local global i32 0, align 4
@CX0342_SYS_CTRL_0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gspca_dev*, i32)* @setbgain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setbgain(%struct.gspca_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.gspca_dev*, align 8
  %4 = alloca i32, align 4
  store %struct.gspca_dev* %0, %struct.gspca_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.gspca_dev*, %struct.gspca_dev** %3, align 8
  %6 = load i32, i32* @CX0342_RAW_BGAIN_H, align 4
  %7 = load i32, i32* %4, align 4
  %8 = ashr i32 %7, 8
  %9 = call i32 @i2c_w(%struct.gspca_dev* %5, i32 %6, i32 %8)
  %10 = load %struct.gspca_dev*, %struct.gspca_dev** %3, align 8
  %11 = load i32, i32* @CX0342_RAW_BGAIN_L, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @i2c_w(%struct.gspca_dev* %10, i32 %11, i32 %12)
  %14 = load %struct.gspca_dev*, %struct.gspca_dev** %3, align 8
  %15 = load i32, i32* @CX0342_SYS_CTRL_0, align 4
  %16 = call i32 @i2c_w(%struct.gspca_dev* %14, i32 %15, i32 128)
  ret void
}

declare dso_local i32 @i2c_w(%struct.gspca_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
